# LLM-Architecture

./: .env.example  .gitignore  CROSS_PLATFORM_SETUP.md  DOCUMENTATION.md  GETTING_STARTED.md  MUTATION_FEEDBACK.md  README.md  SIMPLE_MODE.md  main.py  promptevolve.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run_cli.sh  run_evolution.py  setup.ps1  setup.sh  simple_cli.py  taskdefiner.md  test_feedback.json
config/: config.yaml  default.yaml  neo4j_config.yaml
config/domains/: legal.yaml
docs/: API_KEY_TEST_RESULTS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  SCENARIO_USAGE_GUIDE.md
examples/: test_evolution_engine.py  test_simple.py
pattern_library/: artifacts.jsonl
scripts/: clear_and_reload.py  clear_data.py  create_simple_graph.py  debug_relationships.py  load_sample_data.py  visualize_data.py
src/: __init__.py
src/core/: __init__.py  llm_client.py  prompt_challenger.py  prompt_quality_evaluator.py  prompt_solver.py  prompt_verifier.py
src/evolution/: __init__.py  population.py  results.py  simple_engine.py
src/knowledge_graph/: graph_operations.py  neo4j_client.py  query_builder.py
src/models/: database.py  graph_models.py  schema.py
src/patterns/: extractor.py  pattern_library.py
src/promptevolve/: __init__.py  cli.py  data_generator.py  llm_client.py  prompt_enhancer.py  prompt_evolution.py  replace_api_calls.py  scenario_generator.py  setup_promptevolve.py  task_analyzer.py  taskdefiner_old.py
src/utils/: config.py  cost_tracker.py  error_handling.py  logging.py  logging_config.py  text.py
tests/: test_graph_operations.py  test_models.py  test_neo4j_client.py
tools/: inspect_library.py  reindex_vector.py  show_all_db.py
